third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/string/text-after-string.stderr
TOML parse error at line 1, column 41
  |
1 | string = "Is there life after strings?" No.
  |                                         ^
expected newline, `#`
